alertmanager/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
spec:
  tls:
  - hosts:
      - alertmanager.k-tech.cloud
    secretName: alertmanager-secret
  ingressClassName: nginx
  rules:
  - host: alertmanager.k-tech.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              number: 9093
